// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MenuList should match snapshot when Menu is closed 1`] = `
<div
  className="jsx-361472772 jsx-3865884300"
>
  <button
    className="jsx-856601377 jsx-3822723886 "
    disabled={false}
    onClick={[Function]}
  >
    Home
  </button>
  <button
    className="jsx-856601377 jsx-3822723886 "
    disabled={false}
    onClick={[Function]}
  >
    Browse
  </button>
  <button
    className="jsx-856601377 jsx-3822723886 "
    disabled={false}
    onClick={[Function]}
  >
    Login
  </button>
</div>
`;

exports[`components/MenuList should match snapshot when Menu is open 1`] = `
<div
  className="jsx-361472772 jsx-3245243312"
>
  <button
    className="jsx-856601377 jsx-3822723886 "
    disabled={false}
    onClick={[Function]}
  >
    Home
  </button>
  <button
    className="jsx-856601377 jsx-3822723886 "
    disabled={false}
    onClick={[Function]}
  >
    Browse
  </button>
  <button
    className="jsx-856601377 jsx-3822723886 "
    disabled={false}
    onClick={[Function]}
  >
    Login
  </button>
</div>
`;
